# astrology-app

./: .gitattributes  .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  main_dev.dart  main_mock.dart  main_release.dart  main_test.dart
lib/config/: app_mode.dart  env.dart  router.dart
lib/core/astro/: astro_engine.dart
lib/core/network/: api_constants.dart  dio_client.dart  mock_chat_datasource.dart  mock_interceptor.dart  native_websocket.dart  pagination.dart
lib/core/providers/: core_providers.dart
lib/core/storage/: secure_storage.dart
lib/core/theme/: app_theme.dart  colors.dart
lib/core/utils/: debug_observer.dart  error_format.dart
lib/features/shell/: main_shell_page.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
lib/shared/animations/: cosmic_animations.dart
lib/shared/data/: china_regions.dart
lib/shared/models/: expression.dart
lib/shared/providers/: character_providers.dart  (+3 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: astro.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_astro.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_astro.podspec
rust_builder/windows/: CMakeLists.txt
(+299 files in other folders)
